Add sqllite db, test client.

--- a/EDES/appsettings.Development.json
+++ b/EDES/appsettings.Development.json
@@ -6,5 +6,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "ErrorDatabase": "Server=(localdb)\\mssqllocaldb;Database=EDES;Trusted_Connection=True;"
   }
 }
