--- a/EDES/appsettings.Development.json
+++ b/EDES/appsettings.Development.json
@@ -9,5 +9,6 @@
   },
   "ConnectionStrings": {
     "ErrorDatabase": "Server=(localdb)\\mssqllocaldb;Database=EDES;Trusted_Connection=True;"
-  }
+  },
+  "ApiKey": "1BFFB29F-3B95-4F07-BFD7-167590C81A29"
 }
