Add a home controller, auth, admin constrained,

--- a/EDES/Properties/launchSettings.json
+++ b/EDES/Properties/launchSettings.json
@@ -4,14 +4,14 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:53879/",
-      "sslPort": 0
+      "sslPort": 44358
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "error",
+      "launchUrl": "https://localhost:44358/error",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -19,7 +19,7 @@
     "EDES": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "error",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
